# Gmesh

./: .editorconfig  .gitignore  .golangci.yml  Makefile  README.md  go.mod  go.sum
.github/workflows/: ci.yml
cmd/gmesh-relay/: main.go  server.go  server_test.go
cmd/gmeshctl/: main.go
cmd/gmeshd/: main.go
debian/: changelog  control  postinst  prerm  rules
docs/: anomaly.md  architecture.md  bridge.md  circuit.md  deployment.md  egress-profile.md  exit-pool.md  firewall.md  geoip.md  hardening.md  hole-punching.md  ingress-profile.md  l7.md  migration-from-python.md  mtls.md  observability.md  pathmon.md  policies.md  protocol.md  quota.md  roadmap-next.md  roadmap.md  scenarios.md  scope.md
internal/anomaly/: anomaly.go  anomaly_test.go  detectors.go  monitor.go
internal/audit/: audit.go  audit_test.go
internal/circuit/: circuit.go  circuit_test.go  linux.go  platform_linux.go  platform_other.go  stub.go
internal/config/: config.go
internal/crypto/: keys.go  keys_test.go
internal/egress/: detect.go  egress.go  exit_linux.go  linux.go  platform_linux.go  platform_other.go  stub.go  stub_test.go
internal/engine/: benchmark_test.go  engine.go  engine_test.go  racer.go
internal/l7/: l7.go  (+8 more)
python-bridge/: .gitignore  README.md  pyproject.toml
python-bridge/gmesh/v1/: gmesh_pb2.py  gmesh_pb2_grpc.py
python-bridge/gmesh_bridge/: __init__.py  client.py  dispatcher.py  events.py  translator.py
python-bridge/tests/: conftest.py  test_bridge.py
scripts/: build-deb.sh  build.sh  gen-proto-py.sh  gen-proto.sh  install.sh
systemd/: gmeshd.service
(+103 files in other folders)
